--- a/sim-one-a-sinked/src/App.css
+++ b/sim-one-a-sinked/src/App.css
@@ -1,10 +1,17 @@
 .App {
   text-align: center;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.header{
+  height: 70px;
+  width: 100%;
+  background-color: #AB2A19;
+  display: flex;
+  align-items: center;
+}
+.logo {
+  animation: App-logo-spin infinite 1s linear;
+  height: 45px;
+  width: 45px;
 }
 
 .App-header {
@@ -25,4 +32,13 @@
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  font-family: 'Open Sans', sans-serif;
 }
