--- a/sim-one-a-sinked/src/components/homepage/homepage.css
+++ b/sim-one-a-sinked/src/components/homepage/homepage.css
@@ -1,8 +1,9 @@
-.logo{
-  padding: 8px;  
-}
+/* .logo{
+  padding-right: 8px;
+  margin-left: 175px; 
+  animation: App-logo-spin infinite .6s linear;
+} */
 .header{
-    padding-left: 12.5%;
 }
 h1{
     color: white;
@@ -10,7 +11,7 @@ h1{
 }
 .shelf-container{
     height: 100%;
-    width: 75vw;
+    width: 75%;
     margin: 0 auto;
 }
 .shelf{
@@ -18,7 +19,6 @@ h1{
     width: 100%;
     margin: 15px 0;
     border-radius: 8px;
-    padding-left: 18%;
     font-size: 26px;
     color: white;
     background-color: #D34735;
