--- a/sim-one-a-sinked/src/App.css
+++ b/sim-one-a-sinked/src/App.css
@@ -3,20 +3,19 @@
   width: 100vw;
 }
 .header{
-  height: 70px;
+  height: 200px;
   width: 100%;
   background-color: #AB2A19;
   display: flex;
   align-items: center;
 }
 .logo {
-  animation: App-logo-spin infinite .6s linear;
+  animation: App-logo-spin infinite 1s linear;
   height: 45px;
   width: 45px;
-  padding-right: 8px;
+  padding-right: 150px;
   margin-left: 175px; 
 }
-
 h1,
 h2,
 h3,
@@ -26,7 +25,7 @@ h6,
 p {
   font-family: 'Open Sans', sans-serif;
 }
-/* @keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-} */
+@keyframes App-logo-spin {
+  from { transform: rotate(360deg); }
+  to { transform: rotate(0deg); }
+}
