--- a/sim-one-a-sinked/src/components/homepage/homepage.css
+++ b/sim-one-a-sinked/src/components/homepage/homepage.css
@@ -3,9 +3,7 @@
   margin-left: 175px; 
   animation: App-logo-spin infinite .6s linear;
 } */
-.header{
-}
-h1{
+.title{
     color: white;
     font-style: bold;
 }
