--- a/sim-one-a-sinked/src/components/bin/bin.css
+++ b/sim-one-a-sinked/src/components/bin/bin.css
@@ -2,13 +2,46 @@
     display: flex;
     flex-direction: row;
 }
+.bin-title{
+    color: white;
+    font-style: bold;
+}
 .image-container{
-    margin-left: auto;
+    margin: 0 auto;
 }
 .product-info-container{
-    margin-right: auto;
+    margin: 0 auto;
+    width: 40%;
 }
 .product-image{
     height: 300px;
     width: 300px;
+    /* animation: App-logo-spin infinite .425s linear; */
+    border-radius: 150px;
 }
+.edit-buttons{
+    display: flex;
+    justify-content: space-between;
+    align-items: space-between;
+}
+.gray-button{
+    height: 50px;
+    width: 125px;
+    background-color: #D8D8D8;
+    border: none;
+    border-radius: 7px;
+    box-shadow: none;
+    font-size: 24px;
+    font-family: 'Open Sans', sans-serif;
+    text-decoration: none;
+    /* background-color: #4CAF50;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;*/
+} 
