--- a/sim-one-a-sinked/src/components/homepage/homepage.css
+++ b/sim-one-a-sinked/src/components/homepage/homepage.css
@@ -6,6 +6,7 @@
 .title{
     color: white;
     font-style: bold;
+    text-decoration: none;
 }
 .shelf-container{
     height: 100%;
@@ -22,4 +23,5 @@
     background-color: #D34735;
     display: flex;
     align-items: center;
+    text-decoration: none;
 }
