--- a/sim-one-a-sinked/src/components/bin/bin.css
+++ b/sim-one-a-sinked/src/components/bin/bin.css
@@ -54,7 +54,7 @@
 .product-image{
     height: 300px;
     width: 300px;
-    /* animation: App-logo-spin infinite .425s linear; */
+    /* animation: App-logo-spin infinite 5s linear; */
     border-radius: 150px;
 }
 .edit-buttons{
